<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:fontFamily="@font/encodebold"
        android:text="@string/logo"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginLogo"
        app:layout_constraintTop_toTopOf="@+id/loginLogo" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toStartOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/email"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/encode"
        android:text="@string/forget"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/rest"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/encode"
        android:text="@string/rest"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forget"
        app:layout_constraintTop_toTopOf="@+id/forget"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="266dp"
        android:background="@drawable/login"
        android:fontFamily="@font/encode"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget" />

    <TextView
        android:id="@+id/signUp_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/encode"
        android:text="@string/signUp"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dont"
        app:layout_constraintTop_toTopOf="@+id/dont"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/encode"
        android:text="@string/dont"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUp_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>