<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/encodebold"
        android:text="@string/logo"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signUpLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signUpLogo" />

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_username"
        app:layout_constraintEnd_toStartOf="@+id/signUpTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/signUp_username"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/username"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLogo" />

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_username" />

    <EditText
        android:id="@+id/signUp_email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/email"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password" />

    <EditText
        android:id="@+id/signUp_phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/phone"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="@color/txtfeild"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/login"
        android:fontFamily="@font/encode"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_phone" />

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/encode"
        android:text="@string/have"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_signUp"
        app:layout_constraintEnd_toStartOf="@+id/login_signUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/encode"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/have"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>