<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toTopOf="@+id/Edit_Photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/encode"
        android:text="@string/editprofile"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Edit_Photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/edit_username"
        app:layout_constraintEnd_toStartOf="@+id/changePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/changePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/encode"
        android:text="@string/chagePhoto"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Edit_Photo"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/profileName"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePhoto" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text="@string/profileEmail"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:inputType="phone"
        android:padding="10dp"
        android:text="@string/phone"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:ems="10"
        android:fontFamily="@font/encode"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text="@string/pass"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login"
        android:fontFamily="@font/encode"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />


</androidx.constraintlayout.widget.ConstraintLayout>