<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toTopOf="@+id/searchInput"
        app:layout_constraintEnd_toStartOf="@+id/Searchtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Searchtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="255dp"
        android:fontFamily="@font/encode"
        android:text="@string/Search"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textfeild"
        android:queryHint="@string/hintSearch"
        android:inputType="text"
        android:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@+id/Searchlatest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/Searchlatest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/encodebold"
        android:text="@string/latest"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/SearchRecycler"
        app:layout_constraintTop_toBottomOf="@+id/searchInput" />

    <TextView
        android:id="@+id/noSearchData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nodata"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Searchlatest"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/SearchRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Searchlatest" />

</androidx.constraintlayout.widget.ConstraintLayout>